[package]
name = "squire-sqlite3-src"
description = "Bundled SQLite sources for Squire"
version = "3.50.4-alpha.2"
edition = "2024"
repository = "https://github.com/silverlyra/squire-src"
license = "Apache-2.0"
keywords = ["sqlite"]

include = ["amalgamation/sqlite3.c", "amalgamation/sqlite3.h", "/src", "LICENSE.md", "/README.md"]

[features]
default = []
parallel = ["cc/parallel"]

[dependencies.cc]
version = "^1.2.34"

[dependencies.strum]
version = "^0.27.2"
features = ["derive"]
